--- a/src/app/robot-simulator/robot-simulator/robot-simulator.component.css
+++ b/src/app/robot-simulator/robot-simulator/robot-simulator.component.css
@@ -1,30 +1,85 @@
-.row-div {
-    background-color: rgb(255, 157, 149);
-    width: 100%;
-    height: 100%;
-    margin: 2px;
-    padding: 5%;
-}
-
 .table td,
 .table th {
-    height: 10px !important;
-    width: 10px !important;
-    vertical-align: top;
-    border: 2px solid #000;
+    padding: 0;
+}
+
+.box-wrapper td {
+    width: 100px;
+    height: 100px;
+    border: 2px solid black;
+}
+
+
+.fade-in-image {
+    animation: fadeIn 1s;
+    -webkit-animation: fadeIn 1s;
+    -moz-animation: fadeIn 1s;
+    -o-animation: fadeIn 1s;
+    -ms-animation: fadeIn 1s;
+  }
+  @keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+  
+  @-moz-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+  
+  @-webkit-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+  
+  @-o-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+  
+  @-ms-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
+.robo-wrapper {
+    max-width: 90px;
+    margin: 2px;
+    padding: 20px;
+    
+}
+.robo-wrapper{
+    z-index: -1;
+}
+.command-box-container{
     box-sizing: border-box;
+    margin-top: 32px;
+    background-color: rgb(51, 51, 51);
+    width: 100%;
+    height: 80%;
+    border-radius: 6px;
+    position: relative;
+    opacity: 0.8;
+    display: flex;
 }
-
-.table td {
-    padding-left: 110px;
-    padding-right: 110px;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    font-size: 40px;
+.command-box{
+    box-sizing: border-box;
+    padding: 32px 16px;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    color:#fff;
+    
 }
+.poly-wrapper{
+    max-width: 20px;
+    max-height: 20px;
+    
+}
+.command-text{
 
-td {
-    width: 50px !important;
-    height: 50px !important;
-    max-width: fit-content;
+    margin-left: 1px;
+    display:inline;
+    width: fit-content !important;
 }
