Refactor : Added angular app

--- a/src/app/robot-simulator/robot-simulator/robot-simulator.component.html
+++ b/src/app/robot-simulator/robot-simulator/robot-simulator.component.html
@@ -23,7 +23,27 @@
             </div>
         </div>
        
-        <div class="col-md-2"></div>
+        <div class="col-md-2">
+            <div class="text-center "><h4 class="badge badge-info " style="margin-top:10px; font-size: 20px;">Commands List</h4></div>     
+            <div  class="command-list-container">
+                <div class="command-list ">
+                    <div style="display:inline-block; ">
+                        <span  class="poly-wrapper "style="display:inline;" ><img src="assets/images/polyline-cmd.png " class="rounded " /></span><strong><p class="command-list-text">PLACE 1,2,F</p></strong>
+                    </div>
+                    <div style="display:inline-block; ">
+                        <span  class="poly-wrapper "style="display:inline;" ><img src="assets/images/polyline-cmd.png " class="rounded " /></span><strong><p class="command-list-text">MOVE</p></strong>
+                       </div> <div style="display:inline-block; ">
+                       <span  class="poly-wrapper "style="display:inline;" ><img src="assets/images/polyline-cmd.png " class="rounded " /></span><strong><p class="command-list-text">LEFT</p></strong></div> 
+                       <div style="display:inline-block; ">
+                       <span  class="poly-wrapper "style="display:inline;" ><img src="assets/images/polyline-cmd.png " class="rounded " /></span><strong><p class="command-list-text">RIGHT</p></strong>
+                        </div><div style="display:inline-block; ">
+                        <span  class="poly-wrapper "style="display:inline;" ><img src="assets/images/polyline-cmd.png " class="rounded " /></span><strong><p class="command-list-text">REPORT</p></strong>
+                        </div>
+                </div>
+                </div>       
+
+            
+        </div>
 
         <div class="col-md-6">
             <table class="table table-striped box-wrapper">
