--- a/src/app/robot-simulator/robot-simulator/robot-simulator.component.css
+++ b/src/app/robot-simulator/robot-simulator/robot-simulator.component.css
@@ -72,6 +72,27 @@
     color:#fff;
     
 }
+.command-list-container{
+  box-sizing: border-box;
+  margin-top: 24px;
+  background-color: #FAF9F6;
+  width: 100%;
+  height: 50%;
+  border-radius: 6px;
+  position: relative;
+  opacity: 0.8;
+  border: 2px solid steelblue;
+  display: flex;
+}
+.command-list{
+  box-sizing: border-box;
+  padding: 32px 16px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  color:#fff;
+}
 .poly-wrapper{
     max-width: 20px;
     max-height: 20px;
@@ -82,4 +103,10 @@
     margin-left: 1px;
     display:inline;
     width: fit-content !important;
+}
+.command-list-text{
+  margin-left: 5px;
+  font-size: 16px;
+  display:inline;
+  color: rgb(51, 51, 51);
 }
